--- a/style.css
+++ b/style.css
@@ -4,7 +4,14 @@
   border: none;
 }
 
-.ui.borderless.middle.menu {
+.ui.borderless.middlemenu.menu {
   box-shadow: none;
   border: none;
+}
+
+.footer-background {
+  background-color: #292929;
+  height: 200px;
+  color: white;
+  padding-top: 20px;
 }
